--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 csd/csd
 
+# goreleader
+dist/
+
 # Created by https://www.toptal.com/developers/gitignore/api/go,goland+all,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,goland+all,visualstudiocode
 
