--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ version: 2
 updates:
   - package-ecosystem: "gomod"
     directory: "/"
-    target-branch: "dev"
+    target-branch: "next"
     schedule:
       interval: "weekly"
     commit-message:
@@ -16,7 +16,7 @@ updates:
       - "idealo/transport"
   - package-ecosystem: "github-actions"
     directory: "/"
-    target-branch: "dev"
+    target-branch: "next"
     schedule:
       interval: "weekly"
     commit-message:
