--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,25 +4,30 @@ on:
   push:
     # run only against tags
     tags:
-      - '*'
+      - 'v*'
 
 permissions:
   contents: write
-  # packages: write
-  # issues: write
 
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
+      - name: Unshallow
+        run: git fetch --prune --unshallow
       - name: Setup Golang
         uses: actions/setup-go@v3
         with:
-          go-version: '>=1.19.3'
+          go-version-file: "go.mod"
           cache: true
-      # TODO: Setup GPG for signing
+      - name: Import GPG key
+        id: gpg
+        uses: crazy-max/ghaction-import-gpg@v5
+        env:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v4
         with:
@@ -31,3 +36,4 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPG_FINGERPRINT: ${{ steps.gpg.outputs.fingerprint }}
