--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,15 +15,17 @@ builds:
     ldflags:
       - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
     goos:
+      - freebsd
       - windows
       - linux
       - darwin
     goarch:
       - amd64
+      - '386'
       - arm64
     ignore:
-      - goos: windows
-        goarch: 'arm64'
+      - goos: darwin
+        goarch: '386'
     binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
   - format: zip
@@ -32,7 +34,9 @@ archives:
       darwin: Darwin
       linux: Linux
       windows: Windows
-      amd64: x86_64
+      freebsd: FreeBSD
+      386: x86
+      arm64: aarch64
     files:
       - README.md
 checksum:
