--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,4 +96,4 @@ jobs:
         # optionally use data from your repository secrets using the
         # following syntax:
         # SOME_VAR: ${{ secrets.SOME_VAR }}
-      run: go test -v -cover ./internal/provider/
+      run: go test -v -cover ./csd
