--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,11 @@ jobs:
       - name: Import GPG key
         id: gpg
         uses: crazy-max/ghaction-import-gpg@v5
-        env:
+        with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
+      - name: List GPG keys
+        run: gpg -K
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v4
         with:
