--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,8 +25,7 @@ builds:
     binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
   - format: zip
-    #name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ if eq .Arch 'arm64' }}aarch64{{ else }}{{ .Arch }}{{ end }}"
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     rlcp: true
     files:
       - README.md
