--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: CSD Terraform Provider
+  name: csd_terraform_provider
+  title: CSD Terraform Provider
   description: The Common Short Domain product gives you cool short domains (AWS Hosted Zones) in your AWS account so you can manage them yourself, without the hassle of a third party.
   annotations:
     github.com/project-slug: idealo/terraform-provider-csd
