--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -14,5 +14,7 @@ spec:
   owner: group:transport
   dependsOn:
     - component:default/csd
+  subcomponentOf:
+    - component:default/csd
   consumesApis:
     - api:default/CSD_v1
