--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -14,7 +14,7 @@ spec:
   owner: group:transport
   dependsOn:
     - component:default/csd
-  subcomponentOf:
+  partOF:
     - component:default/csd
   consumesApis:
     - api:default/CSD_v1
