[PTTP-1131] change ownership
Signed-off-by: Slim Tabka <tabkaslim@gmail.com>

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   type: library
   lifecycle: production
-  owner: group:transport
+  owner: group:transit
   system: dns
   dependsOn:
     - component:default/csd
