--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,12 +8,12 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "gh-action"
+      prefix: "go"
     labels:
-      - "golang"
+      - "go"
       - "dependencies"
     reviewers:
-      - "idealo/transport"
+      - "idealo/transit"
   - package-ecosystem: "github-actions"
     directory: "/"
     target-branch: "next"
@@ -25,4 +25,4 @@ updates:
       - "gh-action"
       - "dependencies"
     reviewers:
-      - "idealo/transport"
+      - "idealo/transit"
