--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+         terraform_version: 1.10
       - name: Setup Golang
         uses: actions/setup-go@v5
         with:
@@ -78,6 +82,7 @@ jobs:
           - '1.7.*'
           - '1.8.*'
           - '1.9.*'
+          - '1.10.*'
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v4
