chore(CCORE-561f): update dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,24 +1,72 @@
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    directory: "/"
-    target-branch: "main"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "go"
-    labels:
-      - "go"
-      - "dependencies"
   - package-ecosystem: "github-actions"
     directory: "/"
-    target-branch: "main"
     schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "gh-action"
+      interval: "monthly"
+      day: "monday"
+      time: "09:00"
+    open-pull-requests-limit: 10
+    cooldown:
+      default-days: 3
     labels:
-      - "gh-action"
       - "dependencies"
+      - "github-actions"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+
+  - package-ecosystem: "terraform"
+    directories:
+      - "/examples"
+      - "/examples/data-sources"
+      - "/examples/resources"
+      - "/examples/provider"
+    schedule:
+      interval: "monthly"
+      day: "monday"
+      time: "09:00"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 10
+    cooldown:
+      default-days: 3
+    labels:
+      - "dependencies"
+      - "terraform"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+    groups:
+      terraform-all:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+
+  - package-ecosystem: "gomod"
+    directories:
+      - "/"
+      - "/csd"
+      - "/tools"
+    schedule:
+      interval: "monthly"
+      day: "monday"
+      time: "09:00"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 10
+    cooldown:
+      default-days: 3
+    labels:
+      - "dependencies"
+      - "go"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+    groups:
+      go-all:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
