--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,12 +45,12 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-         terraform_version: 1.10
+          terraform_version: 1.10
       - name: Setup Golang
         uses: actions/setup-go@v6
         with:
           go-version-file: "go.mod"
-          cache: true     
+          cache: true
       - run: go generate ./...
       - name: git diff
         run: |
@@ -68,43 +68,50 @@ jobs:
       matrix:
         # list whatever Terraform versions here you would like to support
         terraform:
-          - '0.12.*'
-          - '0.13.*'
-          - '0.14.*'
-          - '0.15.*'
-          - '1.0.*'
-          - '1.1.*'
-          - '1.2.*'
-          - '1.3.*'
-          - '1.4.*'
-          - '1.5.*'
-          - '1.6.*'
-          - '1.7.*'
-          - '1.8.*'
-          - '1.9.*'
-          - '1.10.*'
+          - "0.12.*"
+          - "0.13.*"
+          - "0.14.*"
+          - "0.15.*"
+          - "1.0.*"
+          - "1.1.*"
+          - "1.2.*"
+          - "1.3.*"
+          - "1.4.*"
+          - "1.5.*"
+          - "1.6.*"
+          - "1.7.*"
+          - "1.8.*"
+          - "1.9.*"
+          - "1.10.*"
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v6
-    - name: Setup Golang
-      id: go
-      uses: actions/setup-go@v6
-      with:
-        go-version-file: "go.mod"
-        cache: true
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3.1.2
-      with:
-        terraform_version: ${{ matrix.terraform }}
-        terraform_wrapper: false
-    - name: Get dependencies
-      run: go mod download
-    - name: TF acceptance tests
-      timeout-minutes: 10
-      env:
-        TF_ACC: "1"
-        # Set whatever additional acceptance test env vars here. You can
-        # optionally use data from your repository secrets using the
-        # following syntax:
-        # SOME_VAR: ${{ secrets.SOME_VAR }}
-      run: go test -v -cover ./csd
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v6
+      - name: Setup Golang
+        id: go
+        uses: actions/setup-go@v6
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3.1.2
+        with:
+          terraform_version: ${{ matrix.terraform }}
+          terraform_wrapper: false
+      - name: Get dependencies
+        run: go mod download
+      - name: TF acceptance tests
+        timeout-minutes: 10
+        env:
+          TF_ACC: "1"
+          # Set whatever additional acceptance test env vars here. You can
+          # optionally use data from your repository secrets using the
+          # following syntax:
+          # SOME_VAR: ${{ secrets.SOME_VAR }}
+        run: go test -v -cover ./csd
+
+  auto-merge:
+    needs: [test, build, generate]
+    if: ${{ needs.test.result == 'success' && needs.build.result == 'success' && needs.generate.result == 'success' && github.event.pull_request.user.login == 'dependabot[bot]' }}
+    uses: ./.github/workflows/auto-merge.yml
+    with:
+      pr-number: ${{ github.event.pull_request.number }}
