chore(CCORE-561): use shared auto-merge workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,6 +112,7 @@ jobs:
   auto-merge:
     needs: [test, build, generate]
     if: ${{ needs.test.result == 'success' && needs.build.result == 'success' && needs.generate.result == 'success' && github.event.pull_request.user.login == 'dependabot[bot]' }}
-    uses: ./.github/workflows/auto-merge.yml
+    uses: idealo/cloud-core-github-workflows/.github/workflows/auto-merge.yml@main
+    secrets: inherit
     with:
       pr-number: ${{ github.event.pull_request.number }}
