chore: revert shared auto-merge workflow
Reverts idealo/terraform-provider-csd#254 because organization-shared workflows cannot be used in public repositories.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,7 +112,6 @@ jobs:
   auto-merge:
     needs: [test, build, generate]
     if: ${{ github.event_name == 'pull_request' && needs.test.result == 'success' && needs.build.result == 'success' && needs.generate.result == 'success' && github.event.pull_request.user.login == 'dependabot[bot]' }}
-    uses: idealo/cloud-core-github-workflows/.github/workflows/auto-merge.yml@main
-    secrets: inherit
+    uses: ./.github/workflows/auto-merge.yml
     with:
       pr-number: ${{ github.event.pull_request.number }}
